--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,15 @@ a:hover {
 } */
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.2em;
   line-height: 1.1;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 button {
